# Project-Buttertoast

./: .gitignore  ButtertoastTC  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.IN  README.md  SECURITY.md  __main__.py  __version__.py  buttertoast.py  buttertoast.pyz  changelog.md  config.json  interface.py  license.txt  pyproject.toml  requirements.txt  setup.py  workingtitle.py
.github/: FUNDING.yml
Crypt/: TestUnit_Cryptomat.py  TestUnit_Files.py  cryptomat.py  readme.md
Engine/: engine.py  eventManager.py  plugin_Interface.py  plugin_Loader.py  plugin_loader.py
UI/: BaseUI  BaseUI.py  GUItestProjekt.py  UIBase  gui.py  gui_loader.py  si_loader.py  testGUI.py  testMasterUI.py  testTUI.py  tui.py
Utilities/: readme.md  try_tchuntng.py
buttertoast/: __init__.py  buttertoast.py  config.json
buttertoast/Crypt/: TestUnit_Cryptomat.py  cryptomat.py
buttertoast/Engine/: engine.py  eventManager.py  plugin_Loader.py
buttertoast/UI/: BaseUI.py  CLI.py  gui.py  tui.py
buttertoast/Utilities/: try_tchuntng.py
buttertoast/doc/: LICENSE  about.md  howto.md
buttertoast/plugins/: btp_bmp.py  btp_html.py  btp_ico.py  btp_png.py  btp_wav.py  btp_zip.py
documentation/: mov_Fabian.py
documentation/pix/: BuTo.jpg.tags  BuTo.tif  BuTo.tif.tags
plugins/: Plugin1.py  Plugin2.py  Plugin3.py  Test_btp_png.py  Test_btp_tiff.py  Test_btp_wav.py  btp_bmp.py  btp_html.py  btp_ico.py  btp_pdf.py  btp_png.py  btp_svg.py  btp_tiff.py  btp_txt.py  btp_wav.py  btp_zip.py  goodbye.py  greetings.py  test.py
res/: TCVolume_1MB
